# klebsiella-lincodes

./: .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  build.py  classify.py  pyproject.toml  requirements.txt  scheme.toml
.github/workflows/: deploy-tagged-image.yml  push-main-to-public.yml
src/plincer/: allelestore.py  build.py  classify.py  main.py
test_data/: EuSCAPE_FR041.fasta.cgmlst.json  SRR6892755.fasta.cgmlst.json  SRR9858757.fasta.cgmlst.json
